Dialog sizing, titles, and z-index.  This should ensure the small <500px dialogs are correct, all titles are correctly sized, and the dialog boxes go to the top for older themes, too.

--- a/modules/gallery/css/gallery.css
+++ b/modules/gallery/css/gallery.css
@@ -149,6 +149,15 @@
   text-align: center;
 }
 
+/* Dialogs ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/**
+ * Newer Themeroller-based themes do this on their own, but older
+ * themes need help ensuring that dialogs and overlays are on top
+ */
+.ui-front {
+  z-index: 1000
+}
+
 /** *******************************************************************
  * 2) Admin
  **********************************************************************/
